# polymarket-vs-wallstreet

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vitest.config.ts
docs/: plan.md
docs/agents/: api-contract.md  divergence-commentator.md
sidecar/: pyproject.toml  yfinance_spy.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/history/: route.ts
src/app/api/markets/: route.test.ts  route.ts
src/components/: DemoToggle.tsx  HeroDivergence.tsx  MarketRow.tsx  Sparkline.tsx
src/lib/: black-scholes.test.ts  black-scholes.ts  demo-snapshot.test.ts  demo-snapshot.ts  history.test.ts  history.ts  pairs.ts  spread.test.ts  spread.ts  types.ts
src/lib/sources/: cme-fedwatch.test.ts  cme-fedwatch.ts  deribit.test.ts  deribit.ts  polymarket.test.ts  polymarket.ts  yahoo-spy.test.ts  yahoo-spy.ts
