[project]
name = "polymarket-vs-wallstreet-sidecar"
version = "0.1.0"
description = "yfinance sidecar exposing SPY-options-implied probability"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "yfinance>=0.2.50",
    "scipy>=1.13",
]

[tool.uv]
package = false
